--- a/devStore/src/app/Components/menu-produto-component/menu-produto-component.component.html
+++ b/devStore/src/app/Components/menu-produto-component/menu-produto-component.component.html
@@ -1,1 +1,6 @@
-<p>menu-produto-component works!</p>
+
+<div class="body">
+<button type="button" class="btn btn-primary">Filtrar</button>
+
+<button type="button" class="btn btn-primary">Novo</button>
+</div>
