:construction: Feat (tela-resultados): Criação do HTML e CSS desses dois componentes.

--- a/devStore/src/app/Components/menu-geral-component/menu-geral-component.component.html
+++ b/devStore/src/app/Components/menu-geral-component/menu-geral-component.component.html
@@ -1,10 +1,16 @@
 <div class="menu">
-    <h2>Cadastros</h2>
-    <ul>
-        <li><a>Categorias</a></li>
-        <li><a>Produtos</a></li>
-        <li><a>Pedido</a></li>
-        <li><a href="#">Caixa</a></li>
-    </ul>
+    <h4>Cadastros</h4>
+  
+    <div class="sessao1">
+        <a href="#">Categorias</a>
+        <a href="#">Produtos</a>
+        <a href="#">Clientes</a>
+    </div>
+       
+    <div class="sessao2">
+        <a href="#">Pedido</a>
+        <a href="#">Caixa</a>
+    </div>
+
 </div>
 
