:sparkles: Feat (menu-produto-component): Aplicando propriedade hoover aos botões.

--- a/devStore/src/app/Components/menu-produto-component/menu-produto-component.component.css
+++ b/devStore/src/app/Components/menu-produto-component/menu-produto-component.component.css
@@ -6,6 +6,12 @@ width: 30%;
 
 }
 
+.btn-primary:hover {
+    background-color: hsl(263, 83%, 19%); 
+    border: solid hsl(263, 83%, 19%);
+
+}
+
 .body{
     margin-top: 3%;
     /* Alinhar os botões à direita */
