:sparkles: Feat (header, menu-geral): Mudanças em espaçamentos e tamanho dos elementos.

--- a/devStore/src/app/Components/header/header.component.html
+++ b/devStore/src/app/Components/header/header.component.html
@@ -3,15 +3,15 @@
         <h1>AdasdevStore</h1>
 
         <div class="alinhamento">
-        <h3>Letícia Zalasik</h3>
+        <h3>Letícia</h3>
 
         <div class="img">
             <img src="../../assets/img/perfil.jpg" alt="logo">
         </div>
     
        
-        <div>
-        <button><i class="fa-solid fa-ellipsis-vertical"></i>Sair</button>
+        <div class="botoes">
+        <button><i class="fa-solid fa-ellipsis-vertical fa-lg"></i></button>
     </div>
 </div>
         
