--- a/devStore/src/app/Components/menu-geral-component/menu-geral-component.component.html
+++ b/devStore/src/app/Components/menu-geral-component/menu-geral-component.component.html
@@ -2,9 +2,9 @@
     <h4>Cadastros</h4>
   
     <div class="sessao1">
-        <a href="#">Categorias</a>
-        <a href="#">Produtos</a>
-        <a href="#">Clientes</a>
+        <a href="#"> <i class="fa-solid fa-layer-group"></i>Categorias</a>
+        <a href="#"> <i class="fa-solid fa-box"></i>Produtos</a>
+        <a href="#"> <i class="fa-solid fa-user-group"></i>Clientes</a>
     </div>
        
     <div class="sessao2">
