--- a/devStore/src/app/Components/header/header.component.css
+++ b/devStore/src/app/Components/header/header.component.css
@@ -19,9 +19,11 @@
 .alinhamento{
     display: flex;
     align-items: center;
+    margin-left: 65%;
     
 
 }
+
 img {
     width: 100%;
     border-radius: 55%;
@@ -29,14 +31,31 @@ img {
 }
 
 .img{
-    width: 15%;
+    width: 30%;
     padding: 0px;
-    margin-right: 2%;
-    margin-left: 2%;
+    margin-right: 4%;
+    margin-left: 4%;
+    height: 20%;
 }
 
+button{
+    border: none;
+    background-color: hsl(263, 83%, 19%);
+    width: 100%;
+    height: 100%; 
+}
 
+.fa-ellipsis-vertical{
+    color: white;
+    height: 100%;
+    font-size: 2.0em;
+}
 
+.botoes{
+width: 10%;
+height: 100%;
+
+}
 
 
 
