--- a/devStore/src/app/Components/menu-produto-component/menu-produto-component.component.html
+++ b/devStore/src/app/Components/menu-produto-component/menu-produto-component.component.html
@@ -1,6 +1,6 @@
 
 <div class="body">
-<button type="button" class="btn btn-primary">Filtrar</button>
+<button type="button" class="btn btn-primary"> <i class="fa-solid fa-filter"></i>Filtrar</button>
 
-<button type="button" class="btn btn-primary">Novo</button>
+<button type="button" class="btn btn-primary"> <i class="fa-solid fa-plus"></i>Novo</button>
 </div>
